--- a/.config/spotifyd/spotifyd.conf
+++ b/.config/spotifyd/spotifyd.conf
@@ -88,3 +88,5 @@ zeroconf_port = 4444
 # Can be unknown, computer, tablet, smartphone, speaker, t_v,
 # a_v_r (Audio/Video Receiver), s_t_b (Set-Top Box), and audio_dongle.
 device_type = "computer"
+
+onevent = "/home/fewcm/.local/bin/notification.sh" 
