--- a/.config/mopidy/mopidy.conf
+++ b/.config/mopidy/mopidy.conf
@@ -35,7 +35,7 @@ color = true
 [audio]
 mixer = software
 mixer_volume = 30
-output = autoaudiosink
+output = pulsesink server=127.0.0.1
 #buffer_time = 
 
 [proxy]
@@ -116,7 +116,8 @@ toplist_countries =
 
 [mpris]
 enabled = true
-bus_type = session
+desktop_file = /usr/share/applications/mopidy.desktop
+#bus_type = session
 
 [mpd]
 enabled = true
