--- a/.config/geany/keybindings.conf
+++ b/.config/geany/keybindings.conf
@@ -49,7 +49,7 @@ edit_selectwordpartright=
 edit_togglecase=<Primary><Alt>u
 edit_commentlinetoggle=<Primary>e
 edit_commentline=<Primary>slash
-edit_uncommentline=
+edit_uncommentline=<Primary><Shift>question
 edit_increaseindent=<Primary>i
 edit_decreaseindent=<Primary>u
 edit_increaseindentbyspace=
