--- a/.config/mopidy/mopidy.conf
+++ b/.config/mopidy/mopidy.conf
@@ -45,6 +45,11 @@ output = pulsesink server=127.0.0.1
 #username = 
 #password = 
 
+[local]
+enabled = true
+max_search_results = 100
+media_dir =  /home/fewcm/Music
+
 [file]
 #enabled = true
 #media_dirs = 
@@ -116,8 +121,8 @@ toplist_countries =
 
 [mpris]
 enabled = true
-desktop_file = /usr/share/applications/mopidy.desktop
-#bus_type = session
+#desktop_file = /usr/share/applications/mopidy.desktop
+bus_type = session
 
 [mpd]
 enabled = true
