--- a/.config/geany/plugins/treebrowser/treebrowser.conf
+++ b/.config/geany/plugins/treebrowser/treebrowser.conf
@@ -7,9 +7,9 @@ show_hidden_files=true
 hide_object_files=false
 show_bars=1
 chroot_on_dclick=true
-follow_current_doc=false
+follow_current_doc=true
 on_delete_close_file=true
-on_open_focus_editor=false
+on_open_focus_editor=true
 show_tree_lines=true
 show_bookmarks=false
 show_icons=2
