--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,9 +1,9 @@
 [Settings]
 gtk-theme-name=Gruvbox
 gtk-icon-theme-name=Luna-Dark
-gtk-font-name=DejaVu Sans Semi-Condensed 10
-gtk-cursor-theme-name=Adwaita
-gtk-cursor-theme-size=0
+gtk-font-name=Cantarell 11
+gtk-cursor-theme-name="Bibata-Modern-Amber"
+gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
