--- a/.config/starship/config.toml
+++ b/.config/starship/config.toml
@@ -16,7 +16,7 @@ add_newline = true
 [character]
 success_symbol = "[λ](bold green)"
 error_symbol = "[λ](bold red)"
-vicmd_symbol = "[x](bold green)"
+vicmd_symbol = "[λ](bold yellow)"
 
 [cmd_duration]
 min_time = 2000
