--- a/.config/systemd/user/gnome-keyring-daemon.service
+++ b/.config/systemd/user/gnome-keyring-daemon.service
@@ -4,8 +4,9 @@ Documentation=man:gnome-keyring-daemon(1)
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/gnome-keyring-daemon --components=secrets,pksc11 --start --foreground
+ExecStart=gnome-keyring-daemon --foreground --start --components=pkcs11,secrets
 Restart=on-failure
+RestartSec=1
 
 [Install]
 WantedBy=default.target
