--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ run/user/1000/geany/geany_socket.d64852c1
 /.config/user-dirs.dirs
 /.config/user-dirs.locate
 /.config/autostart/
+/.config/Authy\ Desktop/
 /.config/czkawka/
 /.config/FireDM/
 /.config/font-manager/
