--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Gruvbox
+gtk-theme-name=Gruvbox-Material-Dark-Soft-red
 gtk-icon-theme-name=Luna-Dark
 gtk-font-name=Cantarell 11
 gtk-cursor-theme-name="Bibata-Modern-Amber"
