--- a/.config/systemd/user/mopidy-user.service
+++ b/.config/systemd/user/mopidy-user.service
@@ -1,13 +1,10 @@
 [Unit]
 Description=Mopidy music server
-After=dbus.service
-After=pulseaudio.service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/mopidy
+ExecStart=/usr/bin/mopidy &
 Restart=always
-RestartSec=1
 
 [Install]
 WantedBy=default.target
