--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ run/user/1000/geany/geany_socket.d64852c1
 !/.local/share/fonts/**
 !/.local/share/nemo/
 !/.local/share/nemo/**
+!/.local/share/dotfiles
 
 ## config
 !/.config/
