--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,7 @@
 *socket
 *.socket
 
-/.local/share/dotfiles/home
-/.local/share/dotfiles/home/**
+
 
 /home/fewcm/.config/geany/geany_socket_MyArxh__0
 run/user/1000/geany/geany_socket.d64852c1
@@ -54,8 +53,11 @@ run/user/1000/geany/geany_socket.d64852c1
 !/.local/share/fonts/**
 !/.local/share/nemo/
 !/.local/share/nemo/**
-!/.local/share/dotfiles
 
+!/.local/share/dotfiles
+!/.local/share/dotfiles/**
+/.local/share/dotfiles/home
+/.local/share/dotfiles/home/**
 
 ## config
 !/.config/
