--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ run/user/1000/geany/geany_socket.d64852c1
 /.config/font-manager/
 /.config/goa-1.0/
 /.config/gh/
+/.config/ibus/
 /.config/menus/
 /.config/Mullvad VPN/
 /.config/pulse/
