--- a/.config/polybar/dwm/untitled.ini
+++ b/.config/polybar/dwm/untitled.ini
@@ -1,20 +1,20 @@
-
-[module/spotify]
+[module/now-playing]
 type = custom/script
+exec = /home/fewcm/.config/polybar/dwm/bin/music_zscroll.sh
 tail = true
+interval = 1
 format-prefix = " 󰝚 "
 format-prefix-foreground = ${colors.alt_green}
 format = <label>
-exec = /home/fewcm/.config/polybar/dwm/bin/scroll_spotify_status.sh
 
-[module/spotify-prev]
+[module/playerctl-prev]
 type = custom/script
 exec = echo " 玲"
 format = <label>
 format-foreground = ${colors.green}
 click-left = playerctl --player=playerctld previous
 
-[module/spotify-play-pause]
+[module/playerctl-play-pause]
 type = custom/ipc
 hook-0 = echo "󰏤"
 hook-1 = echo "󰐊"
@@ -23,7 +23,7 @@ format-foreground = ${colors.red}
 format-padding = 1
 click-left = playerctl --player=playerctld play-pause
 
-[module/spotify-next]
+[module/playerctl-next]
 type = custom/script
 exec = echo "怜 "
 format = <label>
