--- a/.config/polybar/dwm/config
+++ b/.config/polybar/dwm/config
@@ -148,8 +148,9 @@ font-2 = "WenQuanYi Zen Hei,文泉驛正黑,文泉驿正黑:style=Regular:size=1
 ;   modules-right = ipc clock
 
 modules-left = sep1 sysmenu sep2 term sep folder sep browser sep editor sep screenshot sep asroot sep widowslist sep layout sep killclient sep refresh
-modules-center = mpd
+modules-center = spotify spotify-prev spotify-play-pause spotify-next
 modules-right = updates sep pulseaudio-control sep wireless-network sep wired-network sep time  sep1
+;;modules-center = now-playing playerctl-prev playerctl-play-pause playerctl-next
 ;;spotify spotify-prev spotify-play-pause spotify-next
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
