--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,10 @@
 *.zwc
 *.uuid
 *tmp
-.log
+*.log
 *.bak
 *socket
 *.socket
-
-
 
 /home/fewcm/.config/geany/geany_socket_MyArxh__0
 run/user/1000/geany/geany_socket.d64852c1
@@ -24,7 +22,6 @@ run/user/1000/geany/geany_socket.d64852c1
 !.ssh/
 !.ssh/**
 !.bash_profile
-!.bash_history
 !.bashrc
 !.dmrc
 !.editorconfig
