--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 !.gitignore
 !.fdignore
 !.hushlogin
+!.pam_environment
+!.xinitrc
 !.Xresources
 !.xsettingsd
 !.zshenv
@@ -42,6 +44,7 @@
 !/.local/share/dotfiles/**
 /.local/share/dotfiles/home
 /.local/share/dotfiles/home/**
+/.local/share/dotfiles/home-backup
 
 ## config
 !/.config/
@@ -50,6 +53,7 @@
 /.config/user-dirs.locate
 /.config/autostart/
 /.config/Authy\ Desktop/
+/.config/citra-emu
 /.config/czkawka/
 /.config/FireDM/
 /.config/font-manager/
