--- a/.local/share/dotfiles/home-backup/.config/Code/User/settings.json
+++ b/.local/share/dotfiles/home-backup/.config/Code/User/settings.json
@@ -1,21 +1,16 @@
-{   
+{
     // Workbench
     "window.newWindowDimensions": "maximized",
     "workbench.startupEditor": "newUntitledFile",
     "workbench.colorTheme": "Gruvbox Material Dark",
-    "workbench.iconTheme": "gruvbox-material-icon-theme",
     "workbench.sideBar.location": "left",
     "workbench.list.smoothScrolling": true,
     "workbench.tips.enabled": false,
     "workbench.activityBar.visible": true,
-
     // Files and search
     "files.defaultLanguage": "{activeEditorLanguage}",
-    "files.autoSave": "onFocusChange",
-
     // Stats and telemetry:
     "telemetry.telemetryLevel": "off",
-    
     // Editor and breadcrumbs
     "breadcrumbs.enabled": true,
     "editor.renderControlCharacters": false,
@@ -24,8 +19,8 @@
     "editor.wordWrap": "on",
     "editor.cursorSmoothCaretAnimation": true,
     "editor.fontLigatures": true,
-    "editor.fontFamily": "'Iosevka Term','Material Design Icons Desktop'",
-    "editor.fontWeight": "400" ,
+    "editor.fontFamily": "'Iosevka','Material Design Icons Desktop'",
+    "editor.fontWeight": "400",
     "editor.lineHeight": 21,
     "editor.letterSpacing": 0.4,
     "editor.formatOnSave": true,
@@ -34,9 +29,8 @@
     "extensions.ignoreRecommendations": true,
     "explorer.openEditors.visible": 0,
     "editor.tabCompletion": "on",
-
     //
-    "terminal.integrated.fontFamily": "Iosevka Term",
+    "terminal.integrated.fontFamily": "Iosevka",
     "terminal.integrated.fontSize": 13,
     "terminal.integrated.copyOnSelection": false,
     "terminal.integrated.cursorBlinking": true,
@@ -46,11 +40,17 @@
     "explorer.confirmDragAndDrop": false,
     "explorer.confirmDelete": false,
     "security.workspace.trust.untrustedFiles": "newWindow",
-
     // Terminal
     "terminal.integrated.defaultProfile.linux": "zsh",
     "security.workspace.trust.banner": "never",
     "security.workspace.trust.emptyWindow": false,
     "bracketPairColorizer.depreciation-notice": false,
-    
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.editor.untitled.hint": "hidden",
+    "sync.autoDownload": true,
+    "sync.autoUpload": true,
+    "sync.quietSync": false,
+    "sync.gist": "60134955043aaff3763a1d82d0b87d21",
+    "terminal.external.linuxExec": "st",
+    "window.zoomLevel": -1,
 }
