--- a/.local/share/dotfiles/home-backup/.gitignore
+++ b/.local/share/dotfiles/home-backup/.gitignore
@@ -1,19 +1,6 @@
 # all ignore #
 /*
-/.
-
-*.git/
-*MyArxh*
-*.zwc
-*.uuid
-*tmp
-*.log
-*.bak
-*socket
-*.socket
-
-/home/fewcm/.config/geany/geany_socket_MyArxh__0
-run/user/1000/geany/geany_socket.d64852c1
+/.**
 
 !/Pictures/
 !/Pictures/**
@@ -28,6 +15,8 @@ run/user/1000/geany/geany_socket.d64852c1
 !.gitignore
 !.fdignore
 !.hushlogin
+!.pam_environment
+!.xinitrc
 !.Xresources
 !.xsettingsd
 !.zshenv
@@ -51,11 +40,11 @@ run/user/1000/geany/geany_socket.d64852c1
 !/.local/share/fonts/**
 !/.local/share/nemo/
 !/.local/share/nemo/**
-
 !/.local/share/dotfiles
 !/.local/share/dotfiles/**
 /.local/share/dotfiles/home
 /.local/share/dotfiles/home/**
+/.local/share/dotfiles/home-backup
 
 ## config
 !/.config/
@@ -84,3 +73,14 @@ run/user/1000/geany/geany_socket.d64852c1
 !/.config/Code/User/
 /.config/Code/User/**
 !/.config/Code/User/settings.json
+
+secret
+*.git/
+*MyArxh*
+*.zwc
+*.uuid
+*tmp
+*.log
+*.bak
+*socket
+*.socket
