--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///, file:///run/media/fewcm/local/drama, file:///home/fewcm
-lastVisited=file:///home/fewcm
+history=file:///, file:///run/media/fewcm/local/drama, file:///home/fewcm, file:///home/fewcm/.config/Kvantum/Default%23, file:///home/fewcm/.config
+lastVisited=file:///home/fewcm/.config
 qtVersion=5.15.2
 shortcuts=file:, file:///home/fewcm
 sidebarWidth=95
