--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,7 +1,7 @@
 [Appearance]
 color_scheme_path=/home/fewcm/.config/qt5ct/colors/Gruvbox-Material-Dark-Soft-red.conf
 custom_palette=true
-standard_dialogs=default
+standard_dialogs=gtk3
 style=Windows
 
 [Fonts]
@@ -18,7 +18,7 @@ gui_effects=@Invalid()
 keyboard_scheme=2
 menus_have_icons=true
 show_shortcuts_in_context_menus=true
-stylesheets=@Invalid()
+stylesheets=/usr/share/qt5ct/qss/fusion-fixes.qss, /usr/share/qt5ct/qss/scrollbar-simple.qss, /usr/share/qt5ct/qss/sliders-simple.qss, /usr/share/qt5ct/qss/tooltip-simple.qss
 toolbutton_style=4
 underline_shortcut=1
 wheel_scroll_lines=3
@@ -27,7 +27,7 @@ wheel_scroll_lines=3
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\r\xbc\0\0\x2\x1e\0\0\x10\x44\0\0\x4\x16\0\0\r\xbf\0\0\x2!\0\0\x10\x41\0\0\x4\x13\0\0\0\0\0\0\0\0\n\0\0\0\r\xbf\0\0\x2!\0\0\x10\x41\0\0\x4\x13)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\f\x80\0\0\x2\r\0\0\x11\x7f\0\0\x3\xfb\0\0\f\x83\0\0\x2\x10\0\0\x11|\0\0\x3\xf8\0\0\0\0\0\0\0\0\n\0\0\0\f\x83\0\0\x2\x10\0\0\x11|\0\0\x3\xf8)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\f\x80\0\0\x2\x19\0\0\x11\x7f\0\0\x4\x18\0\0\f\x83\0\0\x2\x1c\0\0\x11|\0\0\x4\x15\0\0\0\0\0\0\0\0\n\0\0\0\f\x83\0\0\x2\x1c\0\0\x11|\0\0\x4\x15)
 
 [Troubleshooting]
 force_raster_widgets=1
